# chaser

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: activity.rs  fflags.rs  lib.rs  models.rs  profile.rs  sober.rs
data/: chaser.desktop  org.chaser.Chaser.desktop  org.chaser.Chaser.metainfo.xml
gui/: Cargo.toml
gui/src/: main.rs
packaging/: org.chaser.Chaser.yml
