[workspace]
resolver = "2"
members = ["core", "cli", "gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chaser contributors"]
repository = "https://github.com/CHANGEME/chaser"
description = "A native GTK4 launcher and manager for Sober (Roblox on Linux)"

[workspace.dependencies]
chaser-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 2
lto = "thin"
