[package]
name = "chaser-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core logic for Chaser: Sober config adapter, profiles, FastFlag catalog"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs.workspace = true
chrono.workspace = true
