[package]
name = "chaser-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native GTK4/libadwaita launcher and manager for Sober (Roblox on Linux)"

[[bin]]
name = "chaser-gui"
path = "src/main.rs"

[dependencies]
chaser-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
